# polyglot-sdk-openapi

./: .gitignore  README.md  openapi.json
go/: README.md  client.go  client_test.go  go.mod  go.sum  main.go
javascript/: README.md  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
javascript/src/: sdk.test.ts  sdk.ts
python/: README.md  pyproject.toml
python/src/: sdk.py  test_sdk.py
