[project]
name = "acme_py"
version = "0.1.0"
description = "An example Python SDK for an OpenAPI service"
dependencies = [
    "httpx>=0.27.2",
    "attrs>=24.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "openapi-python-client>=0.21.5",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.rye.scripts]
generate = "openapi-python-client generate --path ../openapi.json --output-path src/generated --overwrite"
test = { chain = ["generate", "pytest"] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
